refactor(win32): use kffi bindings